src/objects/HeloState__mdt.object
<CustomObject>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPurchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPurchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRefinance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRefinance</label>
        <type>Checkbox</type>
    </fields>
    <label>HeloState</label>
    <pluralLabel>HeloStates</pluralLabel>
</CustomObject>